clean up anti i18n